javac_error.txt
WARNING: A restricted method in java.lang.System has been called
WARNING: java.lang.System::load has been called by net.rubygrapefruit.platform.internal.NativeLibraryLoader in an unnamed module (file:/C:/Users/Ze/.gradle/wrapper/dists/gradle-9.0-bin/3czi7dcr1pf879blyy9qczdy7/gradle-9.0.0/lib/native-platform-0.22-milestone-28.jar)
WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
WARNING: Restricted methods will be blocked in a future release unless native access is enabled

> Task :clean
> Task :app:clean
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:dataBindingMergeDependencyArtifactsDebug
> Task :app:generateDebugResValues
> Task :app:generateDebugResources
> Task :app:mergeDebugResources
> Task :app:packageDebugResources
> Task :app:generateDebugBuildConfig
> Task :app:parseDebugLocalResources
> Task :app:javaPreCompileDebug
> Task :app:dataBindingGenBaseClassesDebug
> Task :app:mapDebugSourceSetPaths
> Task :app:createDebugCompatibleScreenManifests
> Task :app:checkDebugAarMetadata
> Task :app:extractDeepLinksDebug
> Task :app:processDebugMainManifest
> Task :app:processDebugManifest
> Task :app:processDebugManifestForPackage
> Task :app:processDebugResources

> Task :app:compileDebugJavaWithJavac
D:\DayNight-Music-main\app\src\main\java\com\midnight\music\ui\profile\ProfileFragment.java:89: error: cannot find symbol
                int playlistCount = db.playlistDao().getPlaylistCountSync();
                                                    ^
  symbol:   method getPlaylistCountSync()
  location: interface PlaylistDao
D:\DayNight-Music-main\app\src\main\java\com\midnight\music\ui\profile\ProfileFragment.java:90: error: cannot find symbol
                int likedSongsCount = db.songDao().getLikedSongsCountSync();
                                                  ^
  symbol:   method getLikedSongsCountSync()
  location: interface SongDao
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: D:\DayNight-Music-main\app\src\main\java\com\midnight\music\ui\playlist\PlaylistDetailViewModelFactory.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors

> Task :app:compileDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///D:/DayNight-Music-main/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: Recompile with -Xlint:deprecation for details.
  Note: D:\DayNight-Music-main\app\src\main\java\com\midnight\music\ui\playlist\PlaylistDetailViewModelFactory.java uses unchecked or unsafe operations.
  Note: Recompile with -Xlint:unchecked for details.
  Note: Some input files use or override a deprecated API.
  D:\DayNight-Music-main\app\src\main\java\com\midnight\music\ui\profile\ProfileFragment.java:89: error: cannot find symbol
                  int playlistCount = db.playlistDao().getPlaylistCountSync();
                                                      ^
    symbol:   method getPlaylistCountSync()
    location: interface PlaylistDao
  D:\DayNight-Music-main\app\src\main\java\com\midnight\music\ui\profile\ProfileFragment.java:90: error: cannot find symbol
                  int likedSongsCount = db.songDao().getLikedSongsCountSync();
                                                    ^
    symbol:   method getLikedSongsCountSync()
    location: interface SongDao
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.0.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 37s
20 actionable tasks: 20 executed
